2002-08-30  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gnome-calc.c: Keypad are read correctly when numlock
	is on (bug #85356, patch from twaugh@redhat.com)

2002-08-12  Glynn Foster  <glynn.foster@sun.com>

	* gcalc.c: Mark string in about dialog for translation.
	Fixes #89711.

2002-08-08  Glynn Foster  <glynn.fostser@sun.com>

	* gnome-calculator.1: Update man page.

2002-07-29  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* sr.c: (do_sr): fix gcc 3.1.x warning 

2002-07-08  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am: Update for X checks.

2002-07-05  Glynn Foster  <glynn.foster@sun.com>

	* gnome-calculator.desktop.in: s/DocPath/X-GNOME-DocPath. Conforms
	to spec.

2002-07-02 John Fleck <jfleck@inkstain.net>

	* new screenshot (help/C/figures/gcalc_window.png)
	fixes #85766

2002-06-18  Glynn Foster  <glynn.foster@sun.com>

	* gnome-calc.c: Turn on the use of superscripts for power labels
	from George's previous patch.

2002-06-04  George Lebl  <jirka@5z.com>

	* gcalc.c: use _UI_SUBTREE instead of _UI_SUBTREE_STOCK since 
	that makes translations actually work. _UI_SUBTREE_STOCK means
	that the string comes from libgnomeui which in this cases it
	doesn't.

2002-05-31  Ross Burton  <ross@burtonini.com>

	* gcalc.c (about_cb): Set the about dialog as a transient for the
	parent window, so that it appears in the correct place. Fixes #83799.

Fri May 31 13:29:24 2002  George Lebl <jirka@5z.com>

	* gnome-calc.c: fix the 'e' button so that it actually works (use
	  clicked and not the button press event).  Prepare so that we can
	  use the superscripts for the power labels which I didn't change
	  since we're in string freeze.  whack the 'store' global EEEK!
	  Use the fact that memory == 0.0 to see if something is set,
	  that's how most calculators do it.

	* sr.c: random fixage.

2002-05-31  Hidetoshi Tajima <hidetoshi.tajima@sun.com>

	* Makefile.am: Updated fix for #83627.

2002-05-31  Hidetoshi Tajima <hidetoshi.tajima@sun.com>
