@@ -1,3 +1,8 @@
+2002-09-06  Padraig O'Briain  <padraig.obriain@sun.com>
+
+	* gnome-calc.c: Do not set accelerators for upper case characters
+	as GTK treats uppercase and lower case the same.
+
 2002-08-30  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
 	* gnome-calc.c: Keypad are read correctly when numlock
